--- a/index.html
+++ b/index.html
@@ -9,18 +9,24 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <h1> hello world we are software developer</h1>
-    <!--
+    <main id="main-doc">
+      <section class="main-section"> </section>
+      <section class="main-section"> </section>
+      <section class="main-section"> </section>
+      <section class="main-section"> </section>
+      <section class="main-section"> </section>
+      <section class="main-section"> </section>
 
-    Hello Camper!
+    </main>   
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
 
-    - The freeCodeCamp Team
 
-    -->
+
+
+
+
+
+
     <script  src="js/index.js"></script>
   </body>
 </html>
