--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF"
-    <title>Fork Me! FCC: Test Suite Template</title>
+     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -39,13 +39,13 @@
       <section class="main-section" id="Declaring_variables"><header>Declaring variables</header>
       <p>You can declare a variable in three ways: <br>
         With the keyword var. For example,</p>
-
+          <br>
       <div class="w3-container">
         <code>var x = 42..</code>
       </div>
 
-      <p>This syntax can be used to declare both local and global variables.
-            <br>
+      <p>This syntax can be used to declare both local and global <br>
+           
         By simply assigning it a value. For example,</p>
       <div class="w3-container">
         <code>x = 42.</code>
@@ -69,7 +69,9 @@
           JavaScript before ECMAScript 2015 does not have block statement scope; rather, a variable declared within a block is local to the function (or global scope) that the block resides within. For example the following code will log 5, because the scope of x is the function (or global context) within which x is declared, not the block, which in this case is an if statement.</p>
 
           <div class="w3-container">
-            <code> if (true) { var x = 5; } console.log(x); // 5 </code>
+            <code> if (true) { var x = 5; } console.log(x); // 5 
+              
+            </code>
           </div> 
       </section>
 
