--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link href="stylesheet" href="css/style.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<h1>hello we are software developers</h1>
+
 <main id="main-doc">
   <section class="main-section" id="Introduction"><header>Introduction</header>
     <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. 
@@ -71,6 +71,9 @@
   <div class="w3-container">
     <code>x = 42.</code>
   </div>
+  <div class="w3-container">
+    <code>y = 41.</code>
+  </div>
   <p>This always declares a global variable. It generates a strict JavaScript warning. You shouldn't use this variant.
  <br>
     With the keyword let. For example,</p>
@@ -110,11 +113,11 @@
 <header>documentation</header>
 <a class="nav-link" href="#Introduction">Introduction</a>
 <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
-<a class="main-section" href="#JavaScript_and_Java">JavaScript and Java</a>
-<a class="main-section" href="#Hello_world">Hello world</a>
-<a class="main-section" href="#Variables">Variables</a>
-<a class="main-section" href="#Declaring_variables">Declaring variables</a>
-<a class="main-section" href="#Variable_scope">Variable scope</a>
+<a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+<a class="nav-link" href="#Hello_world">Hello world</a>
+<a class="nav-link" href="#Variables">Variables</a>
+<a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+<a class="nav-lin" href="#Variable_scope">Variable scope</a>
 
 
 </nav>
