--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link href="stylesheet" href="css/style.css">
+    <link href="stylesheet" href="css/style1.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 <main id="main-doc">
-  <section class="main-section" id="Introduction"><header>Introduction</header>
+  <section class="main-section" id="Introduction"><header><strong>Introduction<</strong></header>
     <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. 
       Inside a host environment (for example, a web browser), JavaScript can be connected to the
        objects of its environment to provide programmatic control over them.</p>
