--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <link href="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="css/style1.css">
   </head>
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 <main id="main-doc">
-  <section class="main-section" id="Introduction"><header><strong>Introduction<</strong></header>
+  <section class="main-section" id="Introduction"><header><strong>Introduction</strong></header>
     <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. 
       Inside a host environment (for example, a web browser), JavaScript can be connected to the
        objects of its environment to provide programmatic control over them.</p>
+       <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set 
+        of language elements such as operators, control structures, and statements. Core JavaScript can be extended for 
+        a variety of purposes by supplementing it with additional objects; for example:</p>
        <ul>
          <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document
             Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form 
@@ -23,9 +26,7 @@
             information from one invocation to another of the application, or perform file manipulations on a server.</li>
        </ul>
       </section><br><br>
-    <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set 
-      of language elements such as operators, control structures, and statements. Core JavaScript can be extended for 
-      a variety of purposes by supplementing it with additional objects; for example:</p>
+    
     <section class="main-section" id="What_you_should_already_know"><header >What you should already know</header>
     <p>This guide assumes you have the following basic background:</p>
   <ul>
@@ -108,19 +109,19 @@
                 defined</code>
   </section>
 
-</main>   
-<nav id="navbar">
-<header>documentation</header>
-<a class="nav-link" href="#Introduction">Introduction</a>
-<a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
-<a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
-<a class="nav-link" href="#Hello_world">Hello world</a>
-<a class="nav-link" href="#Variables">Variables</a>
-<a class="nav-link" href="#Declaring_variables">Declaring variables</a>
-<a class="nav-lin" href="#Variable_scope">Variable scope</a>
-
-
-</nav>
+</main>
+</body>   
+<nav  class="left" id="navbar">
+  <header>documentation</header> >
+   
+      <a class="nav-link" href="#Introduction">Introduction</a>    
+      <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
+      <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+      <a class="nav-link" href="#Hello_world">Hello world</a>
+      <a class="nav-link" href="#Variables">Variables</a>
+      <a class="nav-link" href="#Declaring_variables">declaring Variables</a>
+    
+ </nav>
 
 
 
@@ -129,5 +130,5 @@
 
 
     <script  src="js/index.js"></script>
-  </body>
+  
 </html>
